--- a/MARPAndroid/res/menu/project.xml
+++ b/MARPAndroid/res/menu/project.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/newid" android:title="New"
+    <item android:id="@+id/projectid" android:title="New project"
         android:icon="@android:drawable/ic_menu_add">
-        <menu>
-            <item android:id="@+id/requestid" android:title="Request"/>
-            <item android:id="@+id/projectid" android:title="Project"/>
-        </menu>
     </item>
-    <item android:id="@+id/modifyid" android:title="Modify"
+    <item android:id="@+id/requestsid" android:title="Requests"
         android:icon ="@android:drawable/ic_menu_edit" ></item>
     <item android:id="@+id/myaccountid" android:title="My Account"
         android:icon ="@android:drawable/ic_menu_my_calendar"></item>
