--- a/MARPAndroid/res/menu/resources.xml
+++ b/MARPAndroid/res/menu/resources.xml
@@ -6,5 +6,10 @@
         android:icon="@android:drawable/ic_menu_add"
         android:title="Add resource">
     </item>
+    <item
+        android:id="@+id/modifyProject"
+        android:icon ="@android:drawable/ic_menu_edit"
+        android:title="Modify project">
+    </item>
 
 </menu>
