--- a/MARPAndroid/res/menu/project.xml
+++ b/MARPAndroid/res/menu/project.xml
@@ -7,8 +7,10 @@
         android:icon ="@android:drawable/ic_menu_edit" ></item>
     <item android:id="@+id/myaccountid" android:title="My Account"
         android:icon ="@android:drawable/ic_menu_my_calendar"></item>
-    <item android:id="@+id/logout" android:title="Logout"
-        android:icon ="@android:drawable/ic_lock_power_off"></item>
+    <item android:id="@+id/about" android:title = "About"
+        android:icon = "@android:drawable/ic_menu_info_details"></item>
+    <item  android:id="@+id/logout" android:title="Logout" 
+        android:icon="@android:drawable/ic_lock_power_off"></item>
     
 
 </menu>
