--- a/MARPAndroid/res/menu/resources.xml
+++ b/MARPAndroid/res/menu/resources.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/refreshResources"
+        android:title="Refresh">
+    </item>
+    <item
         android:id="@+id/newid"
         android:icon="@android:drawable/ic_menu_add"
         android:title="Add resource">
