--- a/MARPAndroid/res/menu/project.xml
+++ b/MARPAndroid/res/menu/project.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item
+        android:id="@+id/refreshProjects"
+        android:title="Refresh">
+    </item>
     <item android:id="@+id/projectid" android:title="New project"
         android:icon="@android:drawable/ic_menu_add">
     </item>
@@ -10,6 +14,10 @@
     <item android:id="@+id/about" android:title = "About"
         android:icon = "@android:drawable/ic_menu_info_details"></item>
     <item  android:id="@+id/logout" android:title="Logout" 
+        android:icon="@android:drawable/ic_lock_power_off"></item>
+    <item  android:id="@+id/addresourcemnuitem" android:title="Add resource" 
+        android:icon="@android:drawable/ic_lock_power_off"></item>
+    <item  android:id="@+id/addusermenuitem" android:title="Add user" 
         android:icon="@android:drawable/ic_lock_power_off"></item>
     
 
