--- a/MARPAndroid/res/layout/addresource.xml
+++ b/MARPAndroid/res/layout/addresource.xml
@@ -14,11 +14,10 @@
             android:layout_height="wrap_content"
             android:text="Startweek:" />
 
-        <EditText
-            android:id="@+id/startweek"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10" />
+        <DatePicker
+            android:id="@+id/startWeekDateAddResource"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textView3"
@@ -26,11 +25,10 @@
             android:layout_height="wrap_content"
             android:text="Endweek:" />
 
-        <EditText
-            android:id="@+id/endweek"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10" />
+        <DatePicker
+            android:id="@+id/endWeekDateAddResource"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textView5"
