--- a/MARPAndroid/res/layout/newproject.xml
+++ b/MARPAndroid/res/layout/newproject.xml
@@ -2,7 +2,7 @@
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="wrap_content" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,11 +36,10 @@
                 android:layout_height="wrap_content"
                 android:text="Startweek:" />
 
-            <EditText
-                android:id="@+id/startweek"
+            <DatePicker
+                android:id="@+id/startWeekNewProject"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/textView3"
@@ -48,11 +47,11 @@
                 android:layout_height="wrap_content"
                 android:text="Deadline:" />
 
-            <EditText
-                android:id="@+id/deadline"
+            <DatePicker
+                android:id="@+id/endWeekNewProject"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10" />
+                android:layout_height="wrap_content" 
+                />
 
             <TextView
                 android:id="@+id/textView4"
