--- a/MARPAndroid/res/menu/resources.xml
+++ b/MARPAndroid/res/menu/resources.xml
@@ -3,6 +3,7 @@
 
     <item
         android:id="@+id/refreshResources"
+        android:icon="@drawable/ic_menu_refresh"
         android:title="Refresh">
     </item>
     <item
